--- a/src/assets/styles/AppSecond.css
+++ b/src/assets/styles/AppSecond.css
@@ -6,3 +6,17 @@
         height: 100vh;
         width: 100vw;
     }
+
+    .navBar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 60px;
+        background-color: #fff;
+        border-bottom: 1px solid #ddd;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        z-index: 1000;
+      }
