--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -5,6 +5,7 @@
         justify-content: center;
         height: 100vh;
         width: 100vw;
+        padding-top: 80px;
     }
 
     .navBar {
@@ -20,3 +21,4 @@
         justify-content: space-around;
         z-index: 1000;
       }
+
