--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,11 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
   min-height: 100vh;
+  font-family: system-ui, sans-serif;
+  background-color: #fff;
+  color: #000;
 }
 
 h1 {
