--- a/src/pages/FindMusiciansPage/FindMusiciansPage.css
+++ b/src/pages/FindMusiciansPage/FindMusiciansPage.css
@@ -6,6 +6,7 @@
   padding: 1rem;
   gap: 2rem;
   padding-top: 15px;
+  height: 100vh;
 }
 
 .sidebar {
@@ -75,8 +76,6 @@
   gap: 1.5rem;
 }
 
-
-
 .genres {
   margin-bottom: 0.5rem;
 }
@@ -113,8 +112,6 @@
     grid-template-columns: repeat(3, 1fr);
   }
 }
-
-
 
 .genre-tag {
   cursor: pointer;
