--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -120,3 +120,13 @@ textarea {
   border-radius: 5px;
   cursor: pointer;
 }
+
+
+
+@media (max-width: 768px) {
+
+  .profile-page {
+    flex-direction: column;
+  }
+
+}
