--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -169,3 +169,59 @@
   color: #555;
   line-height: 1.6;
 }
+
+@media (max-width: 768px) {
+  .hero-overlay {
+    padding: 1rem;
+    max-width: 95%;
+  }
+
+
+  .musicians-textbox {
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+    gap: 0.5rem;
+  }
+
+  .artists-preview {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    gap: 1.5rem;
+  }
+
+  .artist-card {
+    width: 90%;
+  }
+
+  .how-it-works {
+    padding: 1rem;
+  }
+
+  .steps-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .step-card {
+    max-width: 90%;
+    padding: 1rem;
+  }
+
+  .step-number {
+    width: 50px;
+    height: 50px;
+    font-size: 1.25rem;
+  }
+
+  .step-title {
+    font-size: 1.25rem;
+  }
+
+  .step-description {
+    font-size: 0.95rem;
+  }
+}
+
