--- a/src/components/MusicianCard/MusicianCard.css
+++ b/src/components/MusicianCard/MusicianCard.css
@@ -6,6 +6,10 @@
   padding: 1rem;
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+}
+.musician-card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .musician-img {
